# gdsfactory

./: .all-contributorsrc  .bumpversion.cfg  .codecov.yml  .coveragerc  .darglint  .dvcignore  .env  .flake8  .gitignore  .gitlab-ci.yml  .gitpod.yml  .libcst.codemod.yaml  .pre-commit-config.yaml  .pydeps  .pylintrc  .readthedocs.yml  .sourcery.yaml  AGENTS.md  CHANGELOG.md  DEPRECATIONS.md  Dockerfile  Dockerfile-dev  Dockerfile.dev  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  TODO.md  add_type_hints.xonsh  asv.conf.json  build_miniforge.sh  build_miniforge_osx.sh  build_miniforge_win.sh  construct.yaml  docfixes.ipynb  environment.yml  grain.xml  install.bat  (+31 more)
.changelog.d/: 1.fixed  2141.fixed.md  2741.fixed  (+4 more)
genericpdk--sample-projects/photonics--basic--public--pdk/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
genericpdk--sample-projects/photonics--basic--public--pdk/.github/: release-drafter.yml  write_cells.py
genericpdk--sample-projects/photonics--basic--public--pdk/docs/: _config.yml  _toc.yml  api.rst
genericpdk--sample-projects/photonics--basic--public--pdk/mypdk/: __init__.py  cli.py  config.py  import_pdk.py  layers.yaml  models.py  tech.py
genericpdk--sample-projects/photonics--basic--public--pdk/mypdk/cells/: __init__.py  containers.py  couplers.py  die_with_pads.py  fixed.py  grating_couplers.py  heaters.py  mmis.py  mzis.py  rings.py  spirals.py  tapers.py  text.py  vias.py  waveguides.py
genericpdk--sample-projects/photonics--basic--public--pdk/mypdk/klayout/: layers.lyp  tech.lyt
genericpdk--sample-projects/photonics--basic--public--pdk/mypdk/samples/: circuit_simulations_ring.py  circuit_simulations_sc_ring_with_routing.py  component_from_yaml_sc.py  get_route_sc.py  mode_solver_r.py  mode_solver_s.py  sample_all_cells.py  sample_drc_errors.py
genericpdk--sample-projects/photonics--basic--public--pdk/tests/: .gitignore  test_cells.py
genericpdk--sample-projects/photonics--full--public--pdk/: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  install_tech.py  pyproject.toml
genericpdk--sample-projects/photonics--full--public--pdk/.github/: release-drafter.yml  write_components.py
genericpdk--sample-projects/photonics--full--public--pdk/.github/workflows/: pages.yml  release-drafter.yml  release.yml  test_code.yml
genericpdk--sample-projects/photonics--full--public--pdk/docs/: _config.yml  _toc.yml  api.rst
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/: __init__.py  config.py  cross_section.py  routing_strategies.py  sample_big_device_optical.py  sample_transceiver.scm.yml  simulation_settings.py
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/components/: __init__.py
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/components/analog/: __init__.py  inductors.py  interdigital_capacitor.py  interdigitated_electrodes.py  microstrip.py
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/components/bends/: bend_circular.py  bend_circular_heater.py  bend_euler.py  bend_s.py
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/components/containers/: __init__.py  add_fiber_array_optical_south_electrical_north.py  add_termination.py  add_trenches.py  array_component.py  array_hexagonal.py  array_polar.py  copy_layers.py  extend_ports_list.py  extension.py  pack_doe.py  splitter_chain.py  splitter_tree.py
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/components/couplers/: __init__.py  coupler.py  coupler90.py  coupler90bend.py  coupler_adiabatic.py  coupler_asymmetric.py  coupler_bent.py  coupler_broadband.py  coupler_full.py  coupler_pulley.py  coupler_ring.py  coupler_straight_asymmetric.py
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/components/detectors/: detector_ge.py
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/components/dies/: align.py  die.py  die_frame_with_pads.py  die_with_pads.py  seal_ring.py  wafer.py
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/components/edge_couplers/: edge_coupler_array.py
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/components/filters/: __init__.py  awg.py  dbr.py  dbr_tapered.py  fiber.py  fiber_array.py  loop_mirror.py  mode_converter.py  polarization_splitter_rotator.py  terminator.py  terminator_spiral.py
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/klayout/: layers.lyp
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/models/: __init__.py  coupler_racetrack_strip.nc  couplers.py  directional_coupler_strip.nc  waveguides.py
genericpdk--sample-projects/photonics--full--public--pdk/gpdk/samples/: astar_bundle_electrical.pic.yml  astar_bundle_electrical.scm.yml  astar_bundle_routing.pic.yml  astar_bundle_routing.scm.yml  lvs_fail.pic.yml  lvs_fail.scm.yml  lvs_fail2.pic.yml  lvs_fail2.scm.yml  lvs_pass.pic.yml  lvs_pass.scm.yml  lvs_pass2.pic.yml  lvs_pass2.scm.yml  mzi_heater_python.py  sample_all_cells.py  sample_crossing_from_gds.py  sample_drc_errors.py  sample_fill.py  sample_lidar.py  test_1x16_switch.py  transceiver_mzi.py  transceiver_rings.py
genericpdk--sample-projects/photonics--full--public--pdk/notebooks/: 4_circuit_optimization.ipynb
genericpdk--sample-projects/photonics--full--public--pdk/notebooks/femwell/: TFLN_coulomb.ipynb  bent_waveguide.ipynb  bragg_filter.ipynb  coupled_mode_theory.ipynb  crosstalk.ipynb  effective_area.ipynb  fiber_overlap.ipynb  grating_coupler.ipynb  leaky_mode.ipynb  leaky_waveguide.ipynb  metal_heater_phase_shifter.ipynb  pn_junction_modulator.ipynb  refinement.ipynb  selecting_modes.ipynb  si_heater_phase_shifter.ipynb  vary_wavelength.ipynb  waveguide_modes.ipynb
genericpdk--sample-projects/photonics--full--public--pdk/notebooks/gdsfactory-training/: 10_layout.ipynb  20_modesolver_fem.ipynb  22_heater_fem.ipynb  30_mzi.ipynb  31_ring.ipynb  mmi1x2.npz
genericpdk--sample-projects/photonics--full--public--pdk/notebooks/reference_data/: REFERENCES.md
(+7195 files in other folders)
