# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "gdsfactory community", email = "contact@gdsfactory.com"}]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]
dependencies = [
  "jinja2<4",
  "loguru<1",
  "matplotlib<4",
  "numpy",
  "orjson<4",
  "pandas",
  "pydantic>=2",
  "pydantic-settings<3",
  "pydantic-extra-types<3",
  "pyyaml",
  "qrcode",
  "rectpack<1",
  "rich<15",
  "scipy<2",
  "shapely<3",
  "toolz<2",
  "types-PyYAML",
  "typer<1",
  "kfactory[ipy]>=1.4,<1.5",
  "watchdog<7",
  "freetype-py",
  "mapbox_earcut",
  "networkx",
  "scikit-image",
  "trimesh>=4.4.1",
  "ipykernel",
  "attrs",
  "graphviz",
  "pyglet<3",
  "typing-extensions"
]
description = "python library to generate GDS layouts"
keywords = ["eda", "photonics", "python"]
license = {file = "LICENSE"}
name = "gdsfactory"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "9.4.0"

[project.optional-dependencies]
cad = ["kweb>=1.1.9,<2.1"]
dev = [
  "ipykernel",
  "jupyterlab",
  "jsondiff",
  "jsonschema",
  "pre-commit",
  "pylsp-mypy",
  "pytest",
  "pytest-cov",
  "pytest_regressions",
  "types-PyYAML",
  "types-cachetools",
  "pytest-github-actions-annotate-failures",
  "pytest-randomly",
  "pytest-xdist"
]
docs = [
  "autodoc_pydantic>=2.0.1,<3",
  "jupytext",
  "jupyter-book>=0.15.1,<1.1",
  "plotly",
  "Sphinx==7.4.7"
]
full = [
  "gplugins[devsim,femwell,gmsh,meow,sax,schematic,tidy3d]~=1.1",
  "scikit-rf",
  "omegaconf",
  "autograd"
]
maintainer = [
  "ruff>=0.8.3",
  "doc8",
  "xdoctest",
  "mypy",
  "tbump",
  "autotyping",
  "towncrier"
]

[project.scripts]
gf = "gdsfactory.cli:app"

[tool.codespell]
ignore-words-list = "te, te/tm, te, ba, fpr, fpr_spacing, ro, nd, donot, schem"

[tool.mypy]
disable_error_code = ["import-untyped", "has-type", "no-untyped-call"]
exclude = [
  "gdsfactory/export/to_svg.py",
  "test-data-gds/.",
  "gdsfactory/samples/demo/layers_sky130.py",
  "notebooks/*"
]
python_version = "3.11"
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pyright]
reportUnusedExpression = false

[tool.pytest.ini_options]
# addopts = --tb=no
addopts = '--tb=short --ignore=gdsfactory/schematic_editor.py --ignore=gdsfactory/klayout_tech.py --ignore=gdsfactory/geometry/maskprep_flat.py --ignore=gdsfactory/fill_klayout.py --ignore=tests/test_samples.py'
norecursedirs = [
  "gdsfactory/geometry",
  "gdsfactory/plugins",
  "gdsfactory/simulation",
  "extra",
  "gdsfactory/watch.py",
  "gdsfactory/schematic_editor.py",
  "gdsfactory/generic_tech/klayout",
  "docs"
]
python_files = ["gdsfactory/*.py", "tests/*.py"]
testpaths = ["gdsfactory", "tests"]

[tool.ruff]
extend-exclude = ['docs/notebooks/', 'notebooks/']
fix = true

[tool.ruff.lint]
ignore = [
  "B008",  # do not perform function calls in argument defaults
  "B028",  # stacklevel
  "B904",
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408",  # C408 Unnecessary `dict` call (rewrite as a literal)
  "C901",  # too complex
  "D100",  # public module docstrings
  "D101",  # public class docstrings
  "D102",  # public method docstrings
  "D103",  # public function docstrings
  "D104",  # public package docstrings
  "E501",  # line too long, handled by black
  "RUF005",  # Consider {expression} instead of concatenation
  "ANN401",  # typing.Any is not allowed
  "RUF015",  # Using next() instead of [0]
  "UP037"  # Remove quotes from type annotations
]
select = [
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
  "D",  # pydocstyle
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "T10",  # flake8-debugger
  "UP",  # pyupgrade
  "W",  # pycodestyle warnings
  "PERF",  # performance improvements
  "RUF",  # ruff
  "ANN"  # flake8-annotations
]

[tool.ruff.lint.per-file-ignores]
"gdsfactory/samples/*.py" = ["N999"]
"gdsfactory/typings.py" = ["UP035"]
"notebooks/*.ipynb" = ["F821", 'E402', 'F405', 'F403', "D103"]
"tests/*.py" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.package-data]
mypkg = [
  "*.gds",
  "*.lym",
  "*.lyp",
  "*.lyt",
  "*.csv",
  "*.yaml",
  "*.md",
  "LICENSE"
]

[tool.setuptools.packages]
find = {}

[tool.tbump]

[[tool.tbump.before_commit]]
cmd = "towncrier build --yes --version {new_version}"
name = "create & check changelog"

[[tool.tbump.before_commit]]
cmd = "git add CHANGELOG.md"
name = "create & check changelog"

[[tool.tbump.before_commit]]
cmd = "grep -q -F {new_version} CHANGELOG.md"
name = "create & check changelog"

[[tool.tbump.file]]
src = ".github/workflows/release.yml"

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "gdsfactory/config.py"

[[tool.tbump.file]]
src = "notebooks/08_pdk.ipynb"

[[tool.tbump.file]]
src = "gdsfactory/generic_tech/klayout/grain.xml"

[[tool.tbump.file]]
src = "gdsfactory/generic_tech/klayout/pymacros/set_menus.lym"

[[tool.tbump.file]]
src = ".devcontainer/Dockerfile"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "9.4.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.towncrier]
directory = ".changelog.d"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/gdsfactory/gdsfactory/issues/{issue})"
package = "gdsfactory"
start_string = "<!-- towncrier release notes start -->\n"
template = ".changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/gdsfactory/gdsfactory/releases/tag/v{version}) - {project_date}"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
