# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "gdsfactory community", email = "contact@gdsfactory.com"}]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]
dependencies = [
  "jinja2<4",
  "loguru<1",
  "matplotlib<4",
  "numpy",
  "orjson<4",
  "pandas",
  "pydantic>=2",
  "pydantic-settings<3",
  "pydantic-extra-types<3",
  "pyyaml",
  "qrcode",
  "rectpack<1",
  "rich<15",
  "scipy<2",
  "shapely<3",
  "toolz<2",
  "types-PyYAML",
  "typer<1",
  "kfactory[ipy]>=2.2,<2.4",
  "watchdog<7",
  "freetype-py",
  "mapbox_earcut",
  "networkx",
  "scikit-image",
  "trimesh>=4.4.1",
  "ipykernel",
  "attrs",
  "graphviz",
  "pyglet<3",
  "typing-extensions",
  "pygit2",
  "natsort"
]
description = "python library to generate GDS layouts"
keywords = ["eda", "photonics", "python"]
license = {file = "LICENSE"}
name = "gdsfactory"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "9.33.0"

[project.optional-dependencies]
cad = ["kweb>=1.1.9,<2.1"]
dev = [
  "codeflash",
  "ipykernel",
  "jupyterlab",
  "jsondiff",
  "jsonschema",
  "pre-commit",
  "pylsp-mypy",
  "pytest",
  "pytest-cov",
  "pytest_regressions",
  "types-PyYAML",
  "types-cachetools",
  "pytest-github-actions-annotate-failures",
  "pytest-randomly",
  "pytest-xdist",
  "ty"
]
docs = [
  "autodoc_pydantic>=2.0.1,<3",
  "jupytext",
  "jupyter-book>=0.15.1,<1.1",
  "plotly",
  "Sphinx==7.4.7"
]
full = [
  "gplugins[devsim,femwell,gmsh,meow,sax,schematic,tidy3d]>=1.1,<3.0",
  "scikit-rf",
  "omegaconf",
  "autograd"
]
maintainer = [
  "ruff>=0.8.3",
  "doc8",
  "xdoctest",
  "mypy",
  "tbump",
  "autotyping",
  "towncrier"
]

[project.scripts]
gf = "gdsfactory.cli:app"

[tool.codeflash]
benchmarks-root = ""
formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]
ignore-paths = []
# All paths are relative to this pyproject.toml's directory.
module-root = "gdsfactory"
test-framework = "pytest"
tests-root = "tests"

[tool.codespell]
ignore-words-list = "te, te/tm, te, ba, fpr, fpr_spacing, ro, nd, donot, schem"

[tool.mypy]
disable_error_code = ["import-untyped", "has-type", "no-untyped-call"]
exclude = [
  "gdsfactory/export/to_svg.py",
  "test-data-gds/.",
  "gdsfactory/samples/demo/layers_sky130.py",
  "docs/notebooks/*"
]
explicit_package_bases = true
python_version = "3.11"
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pyright]
exclude = ["gdsfactory/samples", "notebooks", "docs"]
pythonVersion = "3.11"
reportArgumentType = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportFunctionMemberAccess = false
reportGeneralTypeIssues = false
reportIndexIssue = false
reportMissingImports = false
reportMissingModuleSource = false
reportOperatorIssue = false
reportOptionalMemberAccess = false
reportOverlappingOverload = false
reportPossiblyUnboundVariable = false
reportReturnType = false
reportUnusedExpression = false

[tool.pytest.ini_options]
# addopts = --tb=no
addopts = '--tb=short --ignore=gdsfactory/schematic_editor.py --ignore=gdsfactory/klayout_tech.py --ignore=gdsfactory/geometry/maskprep_flat.py --ignore=gdsfactory/fill_klayout.py --ignore=tests/test_samples.py'
norecursedirs = [
  "gdsfactory/geometry",
  "gdsfactory/plugins",
  "gdsfactory/simulation",
  "extra",
  "gdsfactory/watch.py",
  "gdsfactory/schematic_editor.py",
  "gdsfactory/gpdk/klayout",
  "gdsfactory/generic_tech/klayout",
  "docs"
]
python_files = ["gdsfactory/*.py", "tests/*.py"]
testpaths = ["gdsfactory", "tests"]

[tool.ruff]
extend-exclude = ['docs/notebooks/']
fix = true

[tool.ruff.lint]
ignore = [
  "ANN401",  # typing.Any is not allowed
  "ARG001",  # unused function argument (common in callbacks/overrides)
  "ARG002",  # unused method argument
  "B008",  # do not perform function calls in argument defaults
  "B904",
  "C408",  # C408 Unnecessary `dict` call (rewrite as a literal)
  "C901",  # too complex
  "E501",  # line too long
  "LOG015",  # root logger call (loguru is used)
  "PLC0415",  # import outside top-level (used for optional deps)
  "PLW0602",  # global variable not assigned
  "PLW0603",  # global statement
  "PLW2901",  # redefined loop name
  "PT011",  # pytest.raises too broad
  "PT012",  # pytest.raises with multiple statements
  "PT018",  # pytest composite assertion
  "PT028",  # pytest.mark.parametrize with default values
  "PT030",  # pytest.warns too broad
  "PTH",  # prefer pathlib (too noisy for existing codebase)
  "RET504",  # unnecessary assign before return
  "RUF005",  # Consider {expression} instead of concatenation
  "SIM102",  # collapsible if
  "SIM105",  # use contextlib.suppress
  "SIM108",  # use ternary instead of if-else
  "SIM117",  # multiple with statements
  "T201",  # print found (used intentionally for user feedback)
  "TRY003",  # long message in exception class
  "TRY004"  # prefer TypeError for type checks
]
select = [
  "A",  # flake8-builtins
  "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "FA",  # flake8-future-annotations
  "FLY",  # flynt (string formatting)
  "FURB",  # refurb (modern Python)
  "I",  # isort
  "LOG",  # flake8-logging
  "PERF",  # performance improvements
  "PIE",  # flake8-pie
  "PLC",  # pylint convention
  "PLE",  # pylint error
  "PLW",  # pylint warning
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "SIM",  # flake8-simplify
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "TRY",  # tryceratops
  "UP",  # pyupgrade
  "W",  # pycodestyle warnings
  "YTT"  # flake8-2020 (sys.version checks)
]

[tool.ruff.lint.per-file-ignores]
"docs/notebooks/*.ipynb" = ["F821", "E402", "F405", "F403", "D103"]
"gdsfactory/components/*.py" = ["F403", "F405"]  # import *
"gdsfactory/generic_tech/*.py" = ["F403", "F405"]  # import *
"gdsfactory/samples/*.py" = ["N999"]  # module name
"gdsfactory/typings.py" = ["UP035"]
"tests/*.py" = ["D103"]  # docstring

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.package-data]
mypkg = [
  "*.gds",
  "*.lym",
  "*.lyp",
  "*.lyt",
  "*.csv",
  "*.yaml",
  "*.md",
  "LICENSE"
]

[tool.setuptools.packages]
find = {}

[tool.tbump]

[[tool.tbump.before_commit]]
cmd = "towncrier build --yes --version {new_version}"
name = "create & check changelog"

[[tool.tbump.before_commit]]
cmd = "git add CHANGELOG.md"
name = "create & check changelog"

[[tool.tbump.before_commit]]
cmd = "grep -q -F {new_version} CHANGELOG.md"
name = "create & check changelog"

[[tool.tbump.file]]
src = ".github/workflows/release.yml"

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "gdsfactory/config.py"

[[tool.tbump.file]]
src = "docs/notebooks/08_pdk.ipynb"

[[tool.tbump.file]]
src = "gdsfactory/generic_tech/klayout/grain.xml"

[[tool.tbump.file]]
src = "gdsfactory/generic_tech/klayout/pymacros/set_menus.lym"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "9.33.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.towncrier]
directory = ".changelog.d"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/gdsfactory/gdsfactory/issues/{issue})"
package = "gdsfactory"
start_string = "<!-- towncrier release notes start -->\n"
template = ".changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/gdsfactory/gdsfactory/releases/tag/v{version}) - {project_date}"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[tool.ty.src]
exclude = ["gdsfactory/samples"]
