[options]
python_requires = >= 3.7

[coverage:run]
omit = **/test_*.py

[coverage:html]
directory = _build/coverage_html_report

[pytype]
python_version = 3.8
inputs = gdsfactory

exclude =
  gdsfactory/autoplacer/
  gdsfactory/drc/

disable =
  pyi-error

[yapf]
based_on_style = google
allow_multiline_lambdas = True

[doc8]
ignore-path=docs/build/html
max-line-length=99
verbose=1
ignore-path-errors=/tmp/other_thing.rst;D001;D002


[flake8]
max-line-length = 88
max-complexity = 38
select = B,C,E,F,W,T4,B9
ignore = E501, E503, E722, W503, W503, E203

extend-ignore =
    RST303

exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    .ipynb_checkpoints,
    .tox,
    extra,
    deprecated,
    gdslib,
    .tox,
    .mypy_cache

[pydocstyle]
inherit = false
match = (?!test).*\.py
add-ignore = D100,D101,D102,D103,D104,D203,D405,D417
convention = google


[codespell]
skip = *.po,*.ts,./src/3rdParty,./src/Test,.mypy_cache,Makefile,.git,extra
count =
quiet-level = 3
